--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ regex==2024.11.6
 requests==2.32.3
 rpds-py==0.24.0
 safetensors==0.5.3
+sentencepiece==0.2.0
 setuptools==78.1.0
 six==1.17.0
 smmap==5.0.2
